- Fixed layout issue: not auto scrolling to bottom when receiving first message of the day

--- a/src/index.css
+++ b/src/index.css
@@ -645,6 +645,7 @@ textarea:focus {
 
 .messages .first-message {
   /* overflow: auto; */
+  padding-top: 1px;
 }
 
 .messages .show-date {
